--- a/newsite/static/newsite/style.css
+++ b/newsite/static/newsite/style.css
@@ -1,4 +1,45 @@
-li a{
-    color: blue;
+* {margin: 0; padding: 0;}
+
+a:link { 
+	color: #000000; text-decoration: none
+}
+a:visited { 
+	color: #000000; text-decoration: none
+}
+a:hover { 
+	color: #3366CC; text-decoration: underline
+}
+a:active { 
+	color: #000000; text-decoration: none
+}
+div {
+  margin: 20px;
 }
 
+ul {
+  list-style-type: none;
+  width: 800px;
+}
+
+h3 {
+  font: bold 20px/1.5 Helvetica, Verdana, sans-serif;
+}
+
+li img {
+  float: left;
+  margin: 0 15px 0 0;
+}
+
+li p {
+  font: 200 12px/1.5 Georgia, Times New Roman, serif;
+}
+
+li {
+  padding: 10px;
+  overflow: auto;
+}
+
+li:hover {
+  background: #eee;
+  cursor: pointer;
+}
